Changed viewbox dimensions to fix stroke overflowing.

--- a/src/styles/_components.site-logo.scss
+++ b/src/styles/_components.site-logo.scss
@@ -1,8 +1,7 @@
 .site-logo {
   display: block;
   position: relative;
-  width: 9rem;
-  padding: 0 20px 20px 0;
+  width: 10rem;
   vertical-align: top;
 }
 
